# changes since the last release:

# 17.07

  -- start of some code cleaning for eventual GPU offload support
     merging from StarLord

  -- added a framework for method-of-lines integration of the
     hydrodynamics.  This does not do characteristic tracing, but
     instead does reconstruction through multiple stages of an ODE
     integrator.  At the moment, radiation is not supported.

# 17.06

  -- we now require the AMReX library instead of the BoxLib library

  -- the Microphysics repository that we rely on for the EOS and 
     reaction networks is now part of the starkiller-astro github. 
     You can change your clone to refer to this via:

     git remote set-url origin ssh://git@github.com/starkiller-astro/Microphysics

  -- a new mechanism for using a stability criterion to trigger
     a regrid at the end of a timestep was added (PR #122)

  -- some cleaning of the logic for momentum fluxes and
     limit_hydro_fluxes_on_small_dens (issues #130, #131)

# 17.05

  -- some protections added in the retry code


# 17.04

  -- rewrote the conservative gravity formulation to work off of the
     potential.  This gives the best conservation with AMR.  This is
     equivalent to the description in Appendix B from Katz et
     al. (2016).


# 17.03

  -- the new refluxing method introduced in 16.11 has been removed,
     as it was determined to not provide any benefit in accuracy.

  -- new derived plot variables are available when using thermal
     diffusion, including the conductivity, diffusion coefficient, and
     the entire diffusion term to the energy equation.  (issue #104)

  -- when all derived variables were stored in the plotfile, we were
     storing the mass fractions twice.  E.g. for he4, we were saving
     "he4" and "X(he4)".  Now only the latter is stored.

  -- created a post_simulation() function that is called at the end of
     a simulation.  An example is provided by test_diffusion where we